--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@
                 <textarea class="form-control" name="Message" rows="10" required></textarea>
               </div>
               <div class="my-3">
-                <!-- <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                <div class="loading">Loading</div>
+                <!-- <div class="error-message"></div> -->
+                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message </button></div>
             </form>
