--- a/index.html
+++ b/index.html
@@ -663,14 +663,14 @@
               const form = document.forms['submit-to-google-sheet']
             
               form.addEventListener('submit', e => {
-                var txt;
-                if (confirm("Thank you for your response. I will get back to you shortly!")) {
+                // var txt;
+                // if (confirm("Thank you for your response. I will get back to you shortly!")) {
                   e.preventDefault()
                   fetch(scriptURL, { method: 'POST', body: new FormData(form)})
                   .then(response => console.log('success', response))
                   .catch(error => console.error('Error!', error.message))
                   window.location ='https://stephaniemoses91.github.io/portfolio/';
-                } 
+                // } 
               })
             </script>
           </div>
