redirect URL changed

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <!-- <div class="error-message"></div> -->
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message </button></div>
@@ -670,7 +670,7 @@
                   fetch(scriptURL, { method: 'POST', body: new FormData(form)})
                   .then(response => console.log('success', response))
                   .catch(error => console.error('Error!', error.message))
-                  window.location="http://127.0.0.1:5500/index.html";
+                  window.location="https://stephaniemoses91.github.io/portfolio/";
               })
             </script>
             
