added quick links from contact to mail and phone

--- a/index.html
+++ b/index.html
@@ -614,15 +614,15 @@
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <a href="mailto:stephaniemoses91@gmail.com"><i class="bi bi-envelope"></i></a> 
                 <h4>Email:</h4>
-                <p>stephaniemoses91@gmail.com</p>
+                <a href="mailto:stephaniemoses91@gmail.com"><p>stephaniemoses91@gmail.com</p></a>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
+                <a href="tel:+16478331425"><i class="bi bi-phone"></i></a>
                 <h4>Call:</h4>
-                <p>+1 647 833 1425</p>
+                <a href="tel:+16478331425"><p>+1 647 833 1425</p></a>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2875.743224359148!2d-79.2265615842689!3d43.88187147911419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4d7dd16b3570d%3A0xeaf0a6008f3b55ab!2s25%20Frederick%20Wilson%20Ave%2C%20Markham%2C%20ON%20L6B%200R1!5e0!3m2!1sen!2sca!4v1616035724879!5m2!1sen!2sca" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
